--- a/.tavis.yml
+++ b/.tavis.yml
@@ -1,9 +1,7 @@
-language: python
-python:  
-  - "3.9"
-# command to install dependencies
-install:
-  - pip install -r requirements.txt
-# command to run tests
-script:
-  - pytest
+sudo: required
+services:
+  - docker
+  
+scripts:
+  - docker build -t alekseiglitch/node .
+  - docker images alekseiglitch/node
