--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,14 @@ services:
   - docker
 
 script:
-  - docker build -t alekseiglitch/node .
-  - docker images alekseiglitch/node
+  - docker build -t $DOCKER_USERNAME/node .
+  - docker images $DOCKER_USERNAME/node
+
+before_deploy:
+  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  
+  deploy:
+  provider: script
+  script: docker push $DOCKER_USERNAME/node
+  on:
+    branch: master
