--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 services:
   - docker
 
@@ -7,7 +6,7 @@ script:
   - docker images $DOCKER_USERNAME/node
 
 before_deploy:
-  - docker login -u $DOCKER_USERNAME -p $DOCKER_PASSWORD
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   
 deploy:
   provider: script
